--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -14,7 +14,7 @@
                         <input type="password" class="form-control" formControlName="password">
 
                     </div>
-                    <button type="submit" class="btn btn-primary btn-lg btn-block">Registrar</button>
+                    <button type="submit" class="fill btn-primary btn-lg btn-block">Registrar</button>
                 </form>
                 <div class="form-group mt-3">
                     <p>¿Ya tienes una cuenta? <a class="button" routerLink="/">Login</a></p>
