--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -9,11 +9,14 @@
         <ul class="navbar-nav mr-auto" *ngIf="user$ | async as user; else login">
             <li class="nav-item active">
                 <a class="nav-link" routerLink="/home">Home
-                    <span class="sr-only">(current)</span>
+
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/quiensoy">¿Quien Soy?</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/juegos">Juegos</a>
             </li>
             <li class="nav-item" *ngIf="user">
                 <span class="nav-link">{{user?.email }}</span>
