--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,6 +4,7 @@
             <div class="card-body">
                 <h1 class="tetx-center">Login</h1>
                 <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+                    <H2>{{message}}</H2>
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input type="email" class="form-control" formControlName="email" value="{{usuario}}">
@@ -14,7 +15,7 @@
                         <input type="password" class="form-control" formControlName="password" value="{{clave}}">
 
                     </div>
-                    <button class="btn btn-primary btn-lg btn-block" type="submit">Ingresar</button>
+                    <button class="fill btn-lg btn-block" type="submit">Ingresar</button>
                 </form>
                 <div class="form-group mt-3">
                     <p>¿No tienes una cuenta? <a class="button" routerLink="/registro">Registro de usuario</a></p>
