--- a/src/app/pages/quien-soy/quien-soy.component.html
+++ b/src/app/pages/quien-soy/quien-soy.component.html
@@ -1,11 +1,11 @@
-<app-menu></app-menu>
 <div class="row">
     <!-- First Container -->
     <div id="quiwn" class="col-md-6 text-center">
         <h3 class="margin">¿Quién Soy?</h3>
-        <p>Vanina Quezada</p>
         <a href="https://github.com/Vaninaquezada/SalaDeJuegos/tree/master" target="_blank">en GitHub <i
                 class="fa fa-github"></i></a>
+        <p>Vanina Quezada</p>
+
 
         <img src="./assets/imagenes/quiensoy.jpg" class="img-responsive img-circle margin" style="display:inline"
             alt="Bird" width="350" height="350">
@@ -14,10 +14,13 @@
 
     <!-- Second Container -->
     <div id="que" class="col-md-6 text-center">
-        <h2 class="margin">Juego: A seleccionar</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis sunt autem nesciunt, maxime ipsum, officiis
-            sapiente voluptate, blanditiis aperiam iste nemo dolorum vel! Error neque est, facere modi cum perferendis.
-        </p>
+        <h2 class="margin">Juego: Rompecabezas de numeros</h2>
+        <p>El objetivo del juego es mover los casilleros de manera tal que los números queden ordenados del 1 al 8,
+            quedando
+            el casillero vacío último.</p>
+        <img class="juego" src="./assets/imagenes/grilla1.png">
+        <img class="flecha" src="./assets/imagenes/Flecha_tesela.svg">
+        <img class="juego" src="./assets/imagenes/grilla2.png">
 
     </div>
 </div>
