--- a/src/app/pages/listados/listados.component.html
+++ b/src/app/pages/listados/listados.component.html
@@ -4,7 +4,8 @@
             <th>Juego</th>
             <th>Jugador</th>
             <th>Resultado</th>
-            <th>errores</th>
+            <th>Correctas</th>
+            <th>Errores</th>
             <th>Movimientos</th>
             <th>Tiempo</th>
             <th>Fecha</th>
@@ -15,6 +16,7 @@
             <td>{{juego.juego}} </td>
             <td>{{juego.usuario}} </td>
             <td>{{juego.resultado}} </td>
+            <td>{{juego.correctas}} </td>
             <td>{{juego.errores}} </td>
             <td>{{juego.clicks}} </td>
             <td>{{juego.tiempo}} </td>
