juego mayor o menor

--- a/src/app/juegos/preguntados/preguntados.component.html
+++ b/src/app/juegos/preguntados/preguntados.component.html
@@ -33,7 +33,7 @@
                     {{respuesta3}}</div>
                 <div class="btn" id="btn4" [ngStyle]="{'background-color': this.estilos[3] }" (click)="oprimir_btn(3)">
                     {{respuesta4}}</div>
-                <button class="fill" (click)="reiniciar()">Siguiente</button>
+                <button class="fill" (click)="reiniciar()">{{opcion}}</button>
             </div>
 
         </div>
